@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121107"
-#define public MagickPackageReleaseDate "snapshot-20121107"
+#define public MagickPackageVersionAddendum ".020121110"
+#define public MagickPackageReleaseDate "snapshot-20121110"
